# mai_architecture_authproxy

./: .env  CMakeLists.txt  Makefile  docker-compose.yml
cmake/: DownloadUserver.cmake
configs/: config_vars.testing.yaml  config_vars.yaml  dynamic_config_fallback.json  static_config.yaml
src/: hello_benchmark.cpp  hello_test.cpp  jwt_checker.cpp  jwt_checker.h  main.cpp
src/components/: auth_factory.cpp  auth_factory.hpp  jwt_checker.cpp  jwt_checker.hpp
src/handlers/: proxy.cpp  proxy.hpp
